syntax = "proto3";

package checkin;

option go_package = "proto/checkin";

import "google/protobuf/timestamp.proto";

// Check-in service gRPC definitions for check-in-service
service CheckInService {
  rpc CreateCheckIn(CreateCheckInRequest) returns (CreateCheckInResponse);
  rpc GetCheckInByID(GetCheckInByIDRequest) returns (GetCheckInByIDResponse);
  rpc GetCheckInsByUser(GetCheckInsByUserRequest) returns (GetCheckInsByUserResponse);
  rpc UpdateCheckIn(UpdateCheckInRequest) returns (UpdateCheckInResponse);
  rpc DeleteCheckIn(DeleteCheckInRequest) returns (DeleteCheckInResponse);
}

// Check-in data structure
message CheckIn {
  int32 id = 1;
  int32 userId = 10;
  string checkInType = 20;
  string notes = 30;
  string location = 40;
  google.protobuf.Timestamp createdAt = 50;
  google.protobuf.Timestamp updatedAt = 60;
}

// Request/Response messages
message CreateCheckInRequest {
  int32 userId = 10;
  string checkInType = 20;
  string notes = 30;
  string location = 40;
}

message CreateCheckInResponse {
  CheckIn checkIn = 1;
  string error = 2;
}

message GetCheckInByIDRequest {
  int32 id = 1;
}

message GetCheckInByIDResponse {
  CheckIn checkIn = 1;
  string error = 2;
}

message GetCheckInsByUserRequest {
  int32 userId = 10;
  int32 limit = 20;
  int32 offset = 30;
}

message GetCheckInsByUserResponse {
  repeated CheckIn checkIns = 1;
  string error = 2;
}

message UpdateCheckInRequest {
  int32 id = 1;
  string checkInType = 20;
  string notes = 30;
  string location = 40;
}

message UpdateCheckInResponse {
  CheckIn checkIn = 1;
  string error = 2;
}

message DeleteCheckInRequest {
  int32 id = 1;
}

message DeleteCheckInResponse {
  string message = 1;
  string error = 2;
}
